--- a/app/css/main.css
+++ b/app/css/main.css
@@ -78,15 +78,15 @@ body {
 .header__nav {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
-  min-height: 20vh;
+  min-height: 15vh;
   box-sizing: border-box;
-  padding: 0 1rem; }
-  @media (min-width: 900px) {
+  padding: 2rem 1rem; }
+  @media (min-width: 500px) {
     .header__nav {
       flex-direction: row;
-      align-items: stretch; } }
+      justify-content: space-between; } }
 
 .header__nav-logo {
   display: block;
@@ -94,23 +94,30 @@ body {
   text-decoration: none;
   padding: 1rem;
   border: 5px solid #ffffff;
-  margin: auto 0; }
+  margin: auto 1rem; }
 
 .header__nav-list {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-  align-items: center;
+  display: none;
   list-style-type: none; }
   @media (min-width: 900px) {
     .header__nav-list {
-      justify-content: flex-end; } }
-  @media (min-width: 600px) {
-    .header__nav-list {
-      flex-direction: row; } }
+      display: flex;
+      flex-direction: row;
+      justify-content: flex-end;
+      align-items: center; } }
+
+.header__nav-list--expanded {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-end;
+  position: fixed;
+  top: 0;
+  right: 0;
+  background-color: black;
+  border-left: 2px solid #ffffff; }
 
 .header__nav-link {
-  display: block;
   padding: 1rem;
   font-size: 1.5rem;
   font-weight: bold;
@@ -123,12 +130,22 @@ body {
 .header__nav-link--cur {
   color: #808080; }
 
+.header__nav-link--mobile {
+  display: block;
+  margin-top: 2rem; }
+  @media (min-width: 900px) {
+    .header__nav-link--mobile {
+      display: none; } }
+  @media (min-width: 500px) {
+    .header__nav-link--mobile {
+      margin-top: 0; } }
+
 .header__action {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  min-height: 80vh;
+  min-height: 85vh;
   box-sizing: border-box;
   padding: 1rem 2rem; }
 
@@ -151,6 +168,6 @@ body {
   flex-direction: column; }
   .header__action-buttons > * {
     margin: 0 1rem 1rem 1rem; }
-  @media (min-width: 600px) {
+  @media (min-width: 500px) {
     .header__action-buttons {
       flex-direction: row; } }
