--- a/app/scss/components/header.scss
+++ b/app/scss/components/header.scss
@@ -10,15 +10,15 @@
 .header__nav {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
-    min-height: 20vh;
+    min-height: 15vh;
     box-sizing: border-box;
-    padding: 0 1rem;
+    padding: 2rem 1rem;
 
-    @media (min-width: 900px) {
+    @media (min-width: 500px) {
         flex-direction: row;
-        align-items: stretch;
+        justify-content: space-between;
     }
 }
 
@@ -28,27 +28,35 @@
     text-decoration: none;
     padding: 1rem;
     border: 5px solid $white;
-    margin: auto 0;
+    margin: auto 1rem;
 }
 
 .header__nav-list {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    align-items: center;
+    display: none;
     list-style-type: none;
 
     @media (min-width: 900px) {
-        justify-content: flex-end;
-    }
-
-    @media (min-width: 600px){
+        display: flex;
         flex-direction: row;
+        justify-content: flex-end;
+        align-items: center;
     }
 }
 
+// WIP
+.header__nav-list--expanded {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-end;
+    position: fixed;
+    top: 0;
+    right: 0;
+    background-color: black;
+    border-left: 2px solid $white;
+}
+
 .header__nav-link {
-    display: block;
     padding: 1rem;
     font-size: 1.5rem;
     font-weight: bold;
@@ -67,12 +75,25 @@
     color: $grey;
 }
 
+.header__nav-link--mobile {
+    display: block;
+    margin-top: 2rem;
+
+    @media (min-width: 900px) {
+        display: none;
+    }
+
+    @media (min-width: 500px) {
+        margin-top: 0;
+    }
+}
+
 .header__action {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    min-height: 80vh;
+    min-height: 85vh;
     box-sizing: border-box;
     padding: 1rem 2rem;
   }
@@ -101,7 +122,7 @@
         margin: 0 1rem 1rem 1rem;
     }
 
-    @media(min-width: 600px) {
+    @media(min-width: 500px) {
         flex-direction: row;
     }
   }
